set link for each page

--- a/result.html
+++ b/result.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>実験用フォーム（移動後）</title>
   </head>
-  <body></body>
+  <body>
+    回答ありがとうございます。 元のページは
+    <a href="https://giftech-inc.github.io/GoogleFormRedirect/">こちら</a>
+  </body>
 </html>
