--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>実験用フォーム</title>
   </head>
-  <body></body>
+  <body>
+    下記の内容にご回答ください。結果ページに移動したい場合は
+    <a href="https://giftech-inc.github.io/GoogleFormRedirect/result.html"
+      >こちら</a
+    >
+  </body>
 </html>
