--- a/index.html
+++ b/index.html
@@ -11,5 +11,59 @@
     <a href="https://giftech-inc.github.io/GoogleFormRedirect/result.html"
       >こちら</a
     >
+
+    <form
+      action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSef15TyZhHGLiO91Uu1vHXMb0O44NrOjy_j6tPL_XkKglvzKQ/formResponse"
+      id="form"
+    >
+      <label class="tagContainer">
+        <span class="required">好きな果物を選択してください</span>
+        <label for="fruite" class="radio">
+          <input
+            id="form-reason"
+            type="radio"
+            value="りんご"
+            name="entry.1980439974"
+            required="required"
+          />
+          <span class="option">りんご</span>
+        </label>
+        <label for="fruite" class="radio">
+          <input
+            id="form-reason"
+            type="radio"
+            value="みかん"
+            name="entry.1980439974"
+            required="required"
+          />
+          <span class="option">みかん</span>
+        </label>
+        <label for="fruite" class="radio">
+          <input
+            id="form-reason"
+            type="radio"
+            value="ばなな"
+            name="entry.1980439974"
+            required="required"
+          />
+          <span class="option">ばなな</span>
+        </label>
+      </label>
+
+      <label class="tagContainer">
+        <span class="required">座右の銘を教えてください</span>
+        <input
+          id="form-hurigana"
+          type="text"
+          name="entry.445884156"
+          placeholder="犬も歩けば棒に当たる、とか？"
+          required="required"
+        />
+      </label>
+
+      <div class="tagContainer btnContainer">
+        <input type="submit" value="送信する" />
+      </div>
+    </form>
   </body>
 </html>
